--- a/source/catalog.html
+++ b/source/catalog.html
@@ -6,7 +6,7 @@
     <title>HTML Academy: Кэт энерджи - каталог</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link href="css/style.min.css" rel="stylesheet">
-    <script src="js/picturefill.min.js"></script>
+    <link rel="preload" href="fonts/oswaldregular.woff2" as="font" crossorigin="anonymous">
 </head>
 
 <body>
@@ -47,13 +47,17 @@
                 <ul class="catalog__list">
                     <li>
                         <article class="catalog__item">
-                            <picture>
+                            <a href="#">
+                              <picture>
                                 <source media="(min-width: 1300px)" srcset="img/chicken-small-desktop@1x.png, img/chicken-small-desktop@2x.png 2x">
                                 <source media="(min-width: 768px)" srcset="img/chicken-small-tablet@1x.png, img/chicken-small-tablet@2x.png 2x">
-                            <img class="catalog__image" src="img/chicken-small-mobile@1x.jpg" srcset="img/chicken-small-mobile@2x.jpg 2x" alt="Упаковка корма pro500chiken">
-                            </picture>
+                              <img class="catalog__image" src="img/chicken-small-mobile@1x.jpg" srcset="img/chicken-small-mobile@2x.jpg 2x" alt="Упаковка корма pro500chiken">
+                              </picture>
+                            </a>
                             <div class="catalog__description">
+                            <a href="#">
                             <h1 class="catalog__title">Cat Energy Pro 500 г</h1>
+                            </a>
                             <table class="catalog__text">
                                 <tr>
                                   <td>Объем</td>
@@ -74,13 +78,17 @@
                     </li>
                     <li>
                         <article class="catalog__item">
+                            <a href="#">
                             <picture>
                                 <source media="(min-width: 1300px)" srcset="img/chicken-big-desktop@1x.png, img/chicken-big-desktop@2x.png 2x">
                                 <source media="(min-width: 768px)" srcset="img/chicken-big-tablet@1x.png, img/chicken-big-tablet@2x.png 2x">
                             <img class="catalog__image catalog__image--big" src="img/chicken-big-mobile@1x.jpg" srcset="img/chicken-big-mobile@2x.jpg 2x" alt="Упаковка корма pro1000chiken">
                             </picture>
+                            </a>
                             <div class="catalog__description">
+                            <a href="#">
                             <h1 class="catalog__title">Cat Energy Pro 1000 г</h1>
+                            </a>
                             <table class="catalog__text">
                                 <tr>
                                   <td>Объем</td>
@@ -101,13 +109,17 @@
                     </li>
                     <li>
                         <article class="catalog__item">
+                            <a href="#">
                             <picture>
                                 <source media="(min-width: 1300px)" srcset="img/fish-small-desktop@1x.png, img/fish-small-desktop@2x.png 2x">
                                 <source media="(min-width: 768px)" srcset="img/fish-small-tablet@1x.png, img/fish-small-tablet@2x.png 2x">
                             <img class="catalog__image" src="img/fish-small-mobile@1x.jpg" srcset="img/fish-small-mobile@2x.jpg 2x" alt="Упаковка корма pro500fish">
                             </picture>
+                            </a>
                             <div class="catalog__description">
+                            <a href="#">
                             <h1 class="catalog__title">Cat Energy Pro 500 г</h1>
+                            </a>
                             <table class="catalog__text">
                                 <tr>
                                   <td>Объем</td>
@@ -128,13 +140,17 @@
                     </li>
                     <li>
                         <article class="catalog__item">
+                            <a href="#">
                             <picture>
                                 <source media="(min-width: 1300px)" srcset="img/fish-big-desktop@1x.png, img/fish-big-desktop@2x.png 2x">
                                 <source media="(min-width: 768px)" srcset="img/fish-big-tablet@1x.png, img/fish-big-tablet@2x.png 2x">
                             <img class="catalog__image catalog__image--big" src="img/fish-big-mobile@1x.jpg" srcset="img/fish-big-mobile@2x.jpg 2x" alt="Упаковка корма pro1000fish">
                             </picture>
+                            </a>
                             <div class="catalog__description">
+                            <a href="#">
                             <h1 class="catalog__title">Cat Energy Pro 1000 г</h1>
+                            </a>
                             <table class="catalog__text">
                                 <tr>
                                   <td>Объем</td>
@@ -155,13 +171,17 @@
                     </li>
                     <li>
                         <article class="catalog__item">
+                            <a href="#">
                             <picture>
                                 <source media="(min-width: 1300px)" srcset="img/buckwheat-small-desktop@1x.png, img/buckwheat-small-desktop@2x.png 2x">
                                 <source media="(min-width: 768px)" srcset="img/buckwheat-small-tablet@1x.png, img/buckwheat-small-tablet@2x.png 2x">
                             <img class="catalog__image" src="img/buckwheat-small-mobile@1x.jpg" srcset="img/buckwheat-small-mobile@2x.jpg 2x" alt="Упаковка корма slim500">
                             </picture>
+                            </a>
                             <div class="catalog__description">
+                            <a href="#">
                             <h1 class="catalog__title">Cat Energy Slim 500 г</h1>
+                            </a>
                             <table class="catalog__text">
                                 <tr>
                                   <td>Объем</td>
@@ -182,13 +202,17 @@
                     </li>
                     <li>
                         <article class="catalog__item">
+                            <a href="#">
                             <picture>
                                 <source media="(min-width: 1300px)" srcset="img/buckwheat-big-desktop@1x.png, img/buckwheat-big-desktop@2x.png 2x">
                                 <source media="(min-width: 768px)" srcset="img/buckwheat-big-tablet@1x.png, img/buckwheat-big-tablet@2x.png 2x">
                             <img class="catalog__image catalog__image--big" src="img/buckwheat-big-mobile@1x.jpg" srcset="img/buckwheat-big-mobile@2x.jpg 2x" alt="Упаковка корма slim1000">
                             </picture>
+                            </a>
                             <div class="catalog__description">
+                            <a href="#">
                             <h1 class="catalog__title">Cat Energy Slim 1000 г</h1>
+                            </a>
                             <table class="catalog__text">
                                 <tr>
                                   <td>Объем</td>
@@ -209,13 +233,17 @@
                     </li>
                     <li>
                         <article class="catalog__item">
+                            <a href="#">
                             <picture>
                                 <source media="(min-width: 1300px)" srcset="img/rice-small-desktop@1x.png, img/rice-small-desktop@2x.png 2x">
                                 <source media="(min-width: 768px)" srcset="img/rice-small-tablet@1x.png, img/rice-small-tablet@2x.png 2x">
                             <img class="catalog__image" src="img/rice-small-mobile@1x.jpg" srcset="img/rice-small-mobile@2x.jpg 2x" alt="Упаковка корма slim500рис">
                             </picture>
+                            </a>
                             <div class="catalog__description">
+                            <a href="#">
                             <h1 class="catalog__title">Cat Energy Slim 500 г</h1>
+                            </a>
                             <table class="catalog__text">
                                 <tr>
                                   <td>Объем</td>
@@ -235,7 +263,7 @@
                         </article>
                     </li>
                     <li>
-                        <a class="view-more">
+                        <div class="view-more">
                             <h2 class="visually-hidden">Показать больше</h2>
                             <svg version="1.1" id="Layer_1" class="view-more__plus" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 30 30" style="enable-background:new 0 0 30 30;" xml:space="preserve">
                               <style type="text/css">
@@ -248,8 +276,8 @@
                             </svg>
                             <b class="view-more__title">Показать еще 100500 товаров</b>
                             <p class="view-more__text">На самом деле вкусов гораздо больше!</p>
-                            <button class="view-more__button button" type="button">Показать все</button>
-                        </a>
+                            <a class="view-more__button button" href="#">Показать все</a>
+                          </div>
                     </li>
                 </ul>
             </div>
@@ -305,7 +333,7 @@
             <div class="gift__wrapper">
                 <a class="gift__link" href="#">
                     <h2 class="visually-hidden">Получи подарок</h2>
-                    <svg class="gift__img" version="1.1" width="55" height="60" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 55.5 60" style="enable-background:new 0 0 55.5 60;" xml:space="preserve">
+                    <svg class="gift__img" version="1.1" width="55" height="60" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 55.5 60" style="enable-background:new 0 0 55.5 60;" xml:space="preserve">
                       <use xlink:href="#icon-gift"></use>
                     </svg>
                     <p class="gift__text">Закажите все и получите чехол для кота в подарок!</p>
@@ -322,12 +350,7 @@
           <p class="contacts__text">ул.Большая Конюшенская , д.19/8 Санкт-Петербург</p>
         </div>
       </div>
-      <!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533277!2d30.320858716096975!3d59.93871648187614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1555329724939!5m2!1sru!2sru" width="320" height="360" frameborder="0" style="border:0" allowfullscreen></iframe>-->
-      <picture>
-          <source media="(min-width: 1300px)" srcset="img/bg-map-desktop@1x.png, img/bg-map-desktop@2x.png 2x">
-          <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.png, img/bg-map-tablet@2x.png 2x">
-      <img class="contacts__image" src="img/bg-map-mobile@1x.png" srcset="img/bg-map-mobile@2x.png 2x" alt="Карта">
-      </picture>
+      <iframe class="contacts__image" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533277!2d30.320858716096975!3d59.93871648187614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1555329724939!5m2!1sru!2sru" width="320" height="360" style="border:0" allowfullscreen></iframe>
     </section>
     <footer class="footer">
         <div class="footer__wrapper">
@@ -338,26 +361,28 @@
             <ul class="social__list">
               <li class="social__item">
                 <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
-                  <svg version="1.1" id="Layer_1" class="social__icon social__icon--vkontakte" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 22 12" style="enable-background:new 0 0 22 12;" xml:space="preserve">
+                  <svg version="1.1" class="social__icon social__icon--vkontakte" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 22 12" style="enable-background:new 0 0 22 12;" xml:space="preserve">
                     <use xlink:href="#icon-vk-mobile"></use>
                   </svg>
+                </a>
               </li>
               <li class="social__item">
                 <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">
-                  <svg class="social__icon social__icon--instagram" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="23px" height="23px" viewBox="-3 -3 23 23" enable-background="new -3 -3 23 23" xml:space="preserve">
+                  <svg class="social__icon social__icon--instagram" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 16 16" style="enable-background:new 0 0 16 16;" xml:space="preserve">
                     <use xlink:href="#icon-insta-mobile"></use>
                   </svg>
+                </a>
               </li>
               <li class="social__item">
                 <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">
-                  <svg class="social__icon social__icon--facebook" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 10 19" style="enable-background:new 0 0 10 19;" xml:space="preserve">
+                  <svg class="social__icon social__icon--facebook" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 10 19" style="enable-background:new 0 0 10 19;" xml:space="preserve">
                     <use xlink:href="#icon-fb-mobile"></use>
                   </svg>
                 </a>
               </li>
             </ul>
           </div>
-            <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" alt="Разработано HTML Academy"><div class="copyright__link-text">HTML
+            <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Разработано HTML Academy"><div class="copyright__link-text">HTML
               Academy</div>
               <svg class="copyright__logo-image" xmlns="http://www.w3.org/2000/svg" width="27" height="34" viewBox="0 0 60 60">
                 <title>HTML Academy</title>
@@ -366,6 +391,8 @@
             </a>
         </div>
       </footer>
+      <script src="js/picturefill.min.js"></script>
+      <script src="js/nav.js"></script>
 </body>
 
 </html>
