--- a/source/index.html
+++ b/source/index.html
@@ -6,7 +6,7 @@
   <title>HTML Academy: Кэт энерджи</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/style.min.css" rel="stylesheet">
-  <script src="js/picturefill.min.js"></script>
+  <link rel="preload" href="fonts/oswaldregular.woff2" as="font" crossorigin="anonymous">
 </head>
 
 <body>
@@ -50,7 +50,7 @@
             <source media="(min-width: 768px)" srcset="img/index-can-tablet@1x.jpg, img/index-can-tablet@2x.jpg 2x">
         <img class="intro__image" src="img/index-can-mobile@1x.png" srcset="img/index-can-mobile@2x.png 2x" alt="Упаковка корма">
         </picture>
-        <a class="intro__link button" href="#">Подобрать программу</a>
+        <a class="intro__link button" href="form.html">Подобрать программу</a>
       </div>
     </section>
     <section class="programs">
@@ -59,7 +59,7 @@
         <ul class="programs__list">
           <li class="programs__item programs__item--slim">
             <div class="programs__image programs__image--slim">
-              <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 70 97" style="enable-background:new 0 0 70 97;" xml:space="preserve">
+              <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 70 97" style="enable-background:new 0 0 70 97;" xml:space="preserve">
                 <use xlink:href="#icon-cat-slim"></use>
               </svg>
             </div>
@@ -70,7 +70,7 @@
           </li>
           <li class="programs__item programs__item--pro">
               <div class="programs__image programs__image--pro">
-              <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 134 56" style="enable-background:new 0 0 134 56;" xml:space="preserve">
+              <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 134 56" style="enable-background:new 0 0 134 56;" xml:space="preserve">
                 <use xlink:href="#icon-cat-pro"></use>
               </svg>
             </div>
@@ -164,12 +164,7 @@
           <p class="contacts__text">ул.Большая Конюшенская , д.19/8 Санкт-Петербург</p>
         </div>
       </div>
-      <!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533277!2d30.320858716096975!3d59.93871648187614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1555329724939!5m2!1sru!2sru" width="320" height="360" frameborder="0" style="border:0" allowfullscreen></iframe>-->
-      <picture>
-          <source media="(min-width: 1300px)" srcset="img/bg-map-desktop@1x.png, img/bg-map-desktop@2x.png 2x">
-          <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.png, img/bg-map-tablet@2x.png 2x">
-      <img class="contacts__image" src="img/bg-map-mobile@1x.png" srcset="img/bg-map-mobile@2x.png 2x" alt="Карта">
-      </picture>
+      <iframe class="contacts__image" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533277!2d30.320858716096975!3d59.93871648187614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1555329724939!5m2!1sru!2sru" width="320" height="360" style="border:0" allowfullscreen></iframe>
   </section>
   <footer class="footer">
     <div class="footer__wrapper">
@@ -180,26 +175,28 @@
         <ul class="social__list">
           <li class="social__item">
             <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
-              <svg version="1.1" id="Layer_1" class="social__icon social__icon--vkontakte" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 22 12" style="enable-background:new 0 0 22 12;" xml:space="preserve">
+              <svg version="1.1" class="social__icon social__icon--vkontakte" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 22 12" style="enable-background:new 0 0 22 12;" xml:space="preserve">
                 <use xlink:href="#icon-vk-mobile"></use>
               </svg>
+            </a>
           </li>
           <li class="social__item">
             <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">
-              <svg class="social__icon social__icon--instagram" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="23px" height="23px" viewBox="-3 -3 23 23" enable-background="new -3 -3 23 23" xml:space="preserve">
+              <svg class="social__icon social__icon--instagram" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 16 16" style="enable-background:new 0 0 16 16;" xml:space="preserve">
                 <use xlink:href="#icon-insta-mobile"></use>
               </svg>
+            </a>
           </li>
           <li class="social__item">
             <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">
-              <svg class="social__icon social__icon--facebook" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 10 19" style="enable-background:new 0 0 10 19;" xml:space="preserve">
+              <svg class="social__icon social__icon--facebook" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 10 19" style="enable-background:new 0 0 10 19;" xml:space="preserve">
                 <use xlink:href="#icon-fb-mobile"></use>
               </svg>
             </a>
           </li>
         </ul>
       </div>
-        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" alt="Разработано HTML Academy"><div class="copyright__link-text">HTML
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Разработано HTML Academy"><div class="copyright__link-text">HTML
           Academy</div>
           <svg class="copyright__logo-image" xmlns="http://www.w3.org/2000/svg" width="27" height="34" viewBox="0 0 60 60">
             <title>HTML Academy</title>
@@ -209,23 +206,8 @@
     </div>
   </footer>
   <div class="block-mock"></div>
-
-<script>
-  var navMain = document.querySelector('.navigation');
-  var navToggle = document.querySelector('.navigation__toggle');
-
-  navMain.classList.remove('navigation--nojs');
-
-  navToggle.addEventListener('click', function() {
-    if (navMain.classList.contains('navigation--closed')) {
-      navMain.classList.remove('navigation--closed');
-      navMain.classList.add('navigation--opened');
-    } else {
-      navMain.classList.add('navigation--closed');
-      navMain.classList.remove('navigation--opened');
-    }
-  });
-</script>
+  <script src="js/picturefill.min.js"></script>
+  <script src="js/nav.js"></script>
 </body>
 
 </html>
