--- a/source/form.html
+++ b/source/form.html
@@ -6,7 +6,7 @@
     <title>HTML Academy: Кэт энерджи - подбор программы</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link href="css/style.min.css" rel="stylesheet">
-    <script src="js/picturefill.min.js"></script>
+    <link rel="preload" href="fonts/oswaldregular.woff2" as="font" crossorigin="anonymous">
 </head>
 
 <body>
@@ -40,6 +40,7 @@
     </nav>
     </div>
 </header>
+  <main>
     <form class="form" action="https://echo.htmlacademy.ru" method="post">
 
       <h1 class="form__name">Подбор программы</h1>
@@ -85,25 +86,27 @@
             <h2 class="form__headline form__headline--contacts">Контактные данные (владельца кота)</h2>
             <div class="form__block form__block--contacts">
                 <label class="form__title" for="email">E-mail<sup>*</sup>:</label>
-                <input class="form__text" type="text" name="email" id="email" placeholder="kuklachev@mail.ru">
+                <input class="form__text" type="email" name="email" id="email" placeholder="kuklachev@mail.ru">
                 <button class="form__email" type="button" aria-label="email">
-                    <svg version="1.1" id="Layer_1" width="17" height="13" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 17 13" style="enable-background:new 0 0 17 13;" xml:space="preserve">
+                    <svg version="1.1" width="17" height="13" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 17 13" style="enable-background:new 0 0 17 13;" xml:space="preserve">
                       <use xlink:href="#icon-mail"></use>
                     </svg>
                 </button>
             </div>
             <div class="form__block form__block--contacts">
                 <label class="form__title" for="number">Телефон<sup>*</sup>:</label>
-                <input class="form__text" type="text" name="number" id="number" pattern="^[ 0-9]+$" placeholder="8(960)900-60-90">
+                <input class="form__text" type="tel" name="number" id="number" pattern="\8\s?[\(]{0,1}9[0-9]{2}[\)]{0,1}\s?\d{3}[-]{0,1}\d{2}[-]{0,1}\d{2}" placeholder="8(960)900-60-90">
                 <button class="form__phone" type="button" aria-label="Телефон">
-                    <use xlink:href="#icon-phone"></use>
+                    <svg version="1.1" id="Layer_1" width="20" height="20" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 20 20" style="enable-background:new 0 0 20 20;" xml:space="preserve">
+                      <use xlink:href="#icon-phone"></use>
+                    </svg>
                 </button>
             </div>
           </div>
 
         <div class="form__positioner form__positioner--comment">
         <h2 class="form__headline">Комментарий</h2>
-        <textarea class="form__comment" cols="40" rows="5" type="text" placeholder="Расскажите обо всех повадках кота"></textarea>
+        <textarea class="form__comment" cols="40" rows="5" placeholder="Расскажите обо всех повадках кота"></textarea>
         </div>
 
       <div class="form__positioner form__positioner--goods">
@@ -137,7 +140,7 @@
         </div>
       </div>
     </form>
-    </main>
+
     <section class="contacts">
       <div class="contacts__wrapper contacts__wrapper--color">
         <div class="contacts__info">
@@ -145,13 +148,14 @@
           <p class="contacts__text">ул.Большая Конюшенская , д.19/8 Санкт-Петербург</p>
         </div>
       </div>
-      <!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533277!2d30.320858716096975!3d59.93871648187614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1555329724939!5m2!1sru!2sru" width="320" height="360" frameborder="0" style="border:0" allowfullscreen></iframe>-->
-      <picture>
-        <source media="(min-width: 1300px)" srcset="img/bg-map-desktop@1x.png, img/bg-map-desktop@2x.png 2x">
-        <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.png, img/bg-map-tablet@2x.png 2x">
-    <img class="contacts__image" src="img/bg-map-mobile@1x.png" srcset="img/bg-map-mobile@2x.png 2x" alt="Карта">
-    </picture>
+      <iframe class="contacts__image" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533277!2d30.320858716096975!3d59.93871648187614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1555329724939!5m2!1sru!2sru" width="320" height="360" style="border:0" allowfullscreen></iframe>
+      <!--<picture>
+         <source media="(min-width: 1300px)" srcset="img/bg-map-desktop@1x.png, img/bg-map-desktop@2x.png 2x">
+         <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.png, img/bg-map-tablet@2x.png 2x">
+     <img class="contacts__image" src="img/bg-map-mobile@1x.png" srcset="img/bg-map-mobile@2x.png 2x" alt="Карта">
+     </picture>-->
     </section>
+    </main>
     <footer class="footer">
         <div class="footer__wrapper">
           <a class="footer__logo">
@@ -161,26 +165,28 @@
             <ul class="social__list">
               <li class="social__item">
                 <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
-                  <svg version="1.1" id="Layer_1" class="social__icon social__icon--vkontakte" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 22 12" style="enable-background:new 0 0 22 12;" xml:space="preserve">
+                  <svg version="1.1" class="social__icon social__icon--vkontakte" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 22 12" style="enable-background:new 0 0 22 12;" xml:space="preserve">
                     <use xlink:href="#icon-vk-mobile"></use>
                   </svg>
+                </a>
               </li>
               <li class="social__item">
                 <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">
-                  <svg class="social__icon social__icon--instagram" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="23px" height="23px" viewBox="-3 -3 23 23" enable-background="new -3 -3 23 23" xml:space="preserve">
+                  <svg class="social__icon social__icon--instagram" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 16 16" style="enable-background:new 0 0 16 16;" xml:space="preserve">
                     <use xlink:href="#icon-insta-mobile"></use>
                   </svg>
+                </a>
               </li>
               <li class="social__item">
                 <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">
-                  <svg class="social__icon social__icon--facebook" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 10 19" style="enable-background:new 0 0 10 19;" xml:space="preserve">
+                  <svg class="social__icon social__icon--facebook" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 10 19" style="enable-background:new 0 0 10 19;" xml:space="preserve">
                     <use xlink:href="#icon-fb-mobile"></use>
                   </svg>
                 </a>
               </li>
             </ul>
           </div>
-            <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" alt="Разработано HTML Academy"><div class="copyright__link-text">HTML
+            <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Разработано HTML Academy"><div class="copyright__link-text">HTML
               Academy</div>
               <svg class="copyright__logo-image" xmlns="http://www.w3.org/2000/svg" width="27" height="34" viewBox="0 0 60 60">
                 <title>HTML Academy</title>
@@ -189,5 +195,7 @@
             </a>
         </div>
       </footer>
+      <script src="js/picturefill.min.js"></script>
+      <script src="js/nav.js"></script>
   </body>
   </html>
