--- a/source/form.html
+++ b/source/form.html
@@ -172,8 +172,8 @@
               </li>
               <li class="social__item">
                 <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">
-                  <svg class="social__icon social__icon--instagram" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 16 16" style="enable-background:new 0 0 16 16;" xml:space="preserve">
-                    <use xlink:href="#icon-insta-mobile"></use>
+                  <svg version="1.1" class="social__icon social__icon--instagram" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 16 16" style="enable-background:new 0 0 16 16;" xml:space="preserve">
+                    <use xlink:href="#icon-insta"></use>
                   </svg>
                 </a>
               </li>
